[tool.poetry]
name = "swole-v2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "tests"},
    {include = "cli"},
    {include = "swole_v2", from = "src"}
]

[tool.poetry.scripts]
db = "cli.db:db"
app = "cli.app:app"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
httpx = "^0.23.1"
python-multipart = "^0.0.5"
uvicorn = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.10.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^0.21.0"
edgedb = "^1.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
pytest-cov = "^4.0.0"
click = "^8.1.3"
pydantic-factories = "^1.17.0"
hypothesis = "^6.61.0"
pytest-asyncio = "^0.20.3"
uvloop = "^0.17.0"
pytest-xdist = "^3.1.0"
ruff = "^0.0.235"
pytest-env = "^0.8.1"
pytest-random-order = "^1.1.0"


[tool.poetry.group.stubs.dependencies]
types-passlib = "^1.7.7.3"
types-python-jose = "^3.3.4"
types-click = "^7.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============ EXRA TOOLS ============

[tool.mypy]
strict = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_return_any = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "nox.*",
    "fastapi.*",
    "pytest.*",
    "pydantic.*",
    "sqlmodel.*",
    "dotenv.*",
    "pydantic_factories.*",
    "uvicorn.*",
    "sqlalchemy_utils.*",
    "hypothesis.*",
    "faker.*",
    "edgedb.*",
    "httpx.*",
    "uvloop.*",
    "pytest_asyncio.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "SECRET_KEY=12345",
    "DUMMY_USERNAME=test",
    "DUMMY_PASSWORD=password123",
    "EDGEDB_INSTANCE=test_db",
    "EDGEDB_DSN=test_db"
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = ["if TYPE_CHECKING:"]

[tool.ruff]
exclude = ["__init__.py"]
fix = true
ignore = ["E731", "B008"]
line-length = 120
select = [
    "C",
    "F", # Pyflakes
    "I", # Isort
    "W", # Warning
    "B", # Flake8-Bugbear
]

[tool.ruff.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5

[tool.ruff.isort]
order-by-type = true
force-single-line = false
known-first-party = ["swole_v2", "cli", "tests"]

[tool.black]
line-length = 120
