[tool.poetry]
name = "swole-v2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "tests"},
    {include = "cli"},
    {include = "swole_v2", from = "src"}
]

[tool.poetry.scripts]
seed = "cli.db:seed"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
python-multipart = "^0.0.6"
uvicorn = "^0.23.0"
pydantic = {extras = ["email"], version = "^2.0.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
edgedb = "^1.2.0"
gunicorn = "^21.0.0"
pydantic-settings = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
pytest-cov = "^4.0.0"
click = "^8.1.3"
hypothesis = "^6.61.0"
pytest-asyncio = "^0.21.0"
uvloop = "^0.17.0"
pytest-xdist = "^3.1.0"
pytest-env = "^0.8.1"
pytest-random-order = "^1.1.0"
toml = "^0.10.2"
mypy = "^1.1.1"
ruff = "^0.0.286"
smokeshow = "^0.3"
flake8 = "^6.0.0"
flake8-type-checking = "^2.4.0"
flake8-pyproject = "^1.2.3"
polyfactory = "^2.0.0"

[tool.poetry.group.stubs.dependencies]
types-passlib = "^1.7.7.3"
types-python-jose = "^3.3.4"
types-click = "^7.1.8"
types-toml = "^0.10.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ============ EXRA TOOLS ============

[tool.mypy]
strict = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "SECRET_KEY=12345",
    "DUMMY_USERNAME=test",
    "DUMMY_PASSWORD=password123",
    "EDGEDB_INSTANCE=test_db"
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 99
exclude_lines = ["if TYPE_CHECKING:"]
omit = ["*/main.py"]

[tool.ruff]
exclude = ["__init__.py"]
fix = true
ignore = ["E731", "B008"]
line-length = 120
select = [
    "C",
    "F", # Pyflakes
    "I", # Isort
    "W", # Warning
    "B", # Flake8-Bugbear
    # Ignore until Fastapi can be used with ruff TCH
    # "TCH", # Flake8-Type-Checking
    "PIE", # Flake8-Pie
    "T20", # Flake8-Print
    "RET", # Flake8-Return
    "RUF", # Ruff-Specfic
]

[tool.ruff.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]
order-by-type = true
force-single-line = false
known-first-party = ["swole_v2", "cli", "tests"]

[tool.black]
line-length = 120

# Ignore until Fastapi can be used with ruff TCH
# [tool.ruff.flake8-type-checking]
# strict = true
# runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.flake8]
ignore = ["E501"]
enable-extensions = ["TC", "TC1"]
type-checking-fastapi-enabled = true
type-checking-pydantic-enabled = true
